k8s/overlays/prod/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-poc
spec:
  replicas: 2
