k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-poc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: poc.app.emfnet.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-poc
                port:
                  number: 80
